<resources>
    <string name="app_name">Surf Project</string>

    <string name="toast_internet_not_available">Internet not available. Please connect and try again</string>
    <string name="toast_sign_in_was_failed">Sign In was failed</string>

    <string name="empty" />

    <string name="sign_in_button">Sign In</string>

    <string name="create_todo_label">Create Todo</string>
    <string name="create_todo_title">Title</string>
    <string name="create_todo_description">Description</string>
    <string name="create_todo_button">Create</string>
    <string name="create_todo_notification">Notification</string>
    <string name="create_todo_notification_date">Date</string>
    <string name="create_todo_notification_time">Time</string>
    <string name="create_todo_notification_clean">Clean</string>

    <string name="edit_todo_button">Edit</string>

    <string name="read_edit_todo">Edit</string>
    <string name="read_delete_todo">Delete</string>

</resources>
