<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="todoViewModel"
            type="ru.aleksandrtrushchinskii.surfproject.ui.viewmodel.TodoViewModel" />

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/createTodoLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/create_todo_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/createTodoTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/create_todo_title"
            app:layout_constraintBaseline_toBaselineOf="@+id/createTodoTitleEditText"
            app:layout_constraintEnd_toStartOf="@+id/createTodoTitleEditText"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/createTodoTitleEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/empty"
            android:inputType="textPersonName"
            android:text="@={todoViewModel.todo.title}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createTodoLabelTextView" />

        <TextView
            android:id="@+id/createTodoDescriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/create_todo_description"
            app:layout_constraintBaseline_toBaselineOf="@+id/createTodoDescriptionEditText"
            app:layout_constraintEnd_toStartOf="@+id/createTodoDescriptionEditText"
            app:layout_constraintStart_toStartOf="parent" />


        <EditText
            android:id="@+id/createTodoDescriptionEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/empty"
            android:inputType="textMultiLine"
            android:text="@={todoViewModel.todo.description}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createTodoTitleEditText" />

        <TextView
            android:id="@+id/createTodoNotificationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/create_todo_notification"
            app:layout_constraintBaseline_toBaselineOf="@+id/createTodoNotificationDateButton"
            app:layout_constraintEnd_toStartOf="@+id/createTodoDescriptionEditText"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/createTodoNotificationDateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/create_todo_notification_date"
            app:layout_constraintEnd_toStartOf="@+id/createTodoNotificationTimeButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/createTodoDescriptionEditText"
            app:layout_constraintTop_toBottomOf="@+id/createTodoDescriptionEditText" />

        <TextView
            android:id="@+id/createTodoNotificationDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/createTodoNotificationDateButton"
            app:layout_constraintStart_toStartOf="@+id/createTodoNotificationDateButton"
            app:layout_constraintTop_toBottomOf="@+id/createTodoNotificationDateButton" />

        <Button
            android:id="@+id/createTodoNotificationTimeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/create_todo_notification_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/createTodoNotificationDateButton"
            app:layout_constraintTop_toTopOf="@+id/createTodoNotificationDateButton" />

        <TextView
            android:id="@+id/createTodoNotificationTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/createTodoNotificationTimeButton"
            app:layout_constraintStart_toStartOf="@+id/createTodoNotificationTimeButton"
            app:layout_constraintTop_toBottomOf="@+id/createTodoNotificationTimeButton" />

        <Button
            android:id="@+id/createTodoNotificationClearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/create_todo_notification_clean"
            app:layout_constraintEnd_toEndOf="@+id/createTodoNotificationTimeButton"
            app:layout_constraintStart_toStartOf="@+id/createTodoNotificationDateButton"
            app:layout_constraintTop_toBottomOf="@+id/createTodoNotificationDateTextView" />

        <Button
            android:id="@+id/createTodoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:onClick="@{() -> todoViewModel.create()}"
            android:text="@string/create_todo_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>
</layout>